# DatabaseEngine

./: .gitignore  CMakeLists.txt
docs/: CATALOG_NOTES.md  CATALOG_TABLE_METADATA_NOTES.md  CMAKE_TUTORIAL.md  CODEX_AGENT_CONTEXT.md  EXECUTION_NOTES.md  INDEX_NOTES.md  PROJECT_CONTEXT.md  PROJECT_PLAN.md  README.md  REFERENCES.md  SQL_NOTES.md  STORAGE_NOTES.md  TABLE_NOTES.md
frontend/: index.html
frontend/scripts/: app.js
frontend/styles/: app.css
include/catalog/: catalog.h  catalog_metadata.h  catalog_serializer.h  schema.h
include/common/: constants.h  row_id.h
include/execution/: executor.h  planner.h
include/index/: bplustree.h  bplustree_internal.h  bplustree_leaf.h  bplustree_page.h  index_key.h
include/server/: database_server.h
include/sql/: ast.h  parser.h  tokenizer.h
include/storage/: table_page.h
include/storage/cache/: page_cache_manager.h
include/storage/disk/: disk_manager.h
include/storage/heap/: heap_file.h
include/storage/page/: page.h  page_layout.h  record.h  slotted_page.h  var_record.h  var_record_serializer.h
include/table/: row.h  row_serializer.h  table.h  table_metadata.h
src/: main.cpp
src/catalog/: catalog.cpp  catalog_serializer.cpp  schema.cpp
src/execution/: executor.cpp  planner.cpp
src/index/: bplustree.cpp  bplustree_internal.cpp  bplustree_leaf.cpp
src/server/: database_server.cpp  main_server.cpp
src/sql/: ast.cpp  parser.cpp  tokenizer.cpp
src/storage/: page.cpp  serializer.cpp  table_page.cpp
src/storage/cache/: page_cache_manager.cpp
src/storage/disk/: disk_manager.cpp
src/storage/heap/: heap_file.cpp
src/storage/page/: slotted_page.cpp  var_record_serializer.cpp
src/table/: row_serializer.cpp  table.cpp
tests/: e2e_tests.cpp  heap_file_row_id_test.cpp  heap_file_test.cpp  heap_file_var_record_test.cpp  index_tests.cpp  page_cache_manager_test.cpp  parser_tests.cpp  slotted_page_compaction_test.cpp  slotted_page_delete_test.cpp  slotted_page_full_test.cpp  slotted_page_test.cpp  slotted_page_update_test.cpp  slotted_page_var_record_test.cpp  storage_tests.cpp  var_record_serializer_test.cpp
tests/catalog/: catalog_test.cpp
tests/execution/: executor_create_table_test.cpp  executor_delete_test.cpp  executor_drop_table_test.cpp  executor_index_test.cpp  executor_insert_test.cpp  executor_test.cpp  executor_update_test.cpp
tests/index/: bplustree_delete_test.cpp  bplustree_insert_test.cpp  bplustree_internal_page_test.cpp  bplustree_leaf_page_test.cpp  bplustree_range_scan_test.cpp  bplustree_search_test.cpp
tests/sql/: parser_test.cpp  tokenizer_test.cpp
tests/table/: row_serializer_test.cpp  table_secondary_index_test.cpp  table_test.cpp
tools/: appointments.sql  generate_students_sql.cpp
